// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime rendering renders Report Date input 1`] = `
<div>
  <div
    class="form-group  "
  >
    <label
      class="col-md-2 control-label"
    >
      some-label
    </label>
    <div
      class="col-md-6"
    >
      <div
        class="date-time-picker-pf-wrapper"
      >
        <div
          style="display: contents;"
        >
          <div
            class="inputGroup"
          >
            <div
              class="inputGroupItem pf-v6-c-date-picker__input pf-v6-c-date-picker "
            >
              <span
                class="formControl  pf-v6-c-form-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="date and time picker"
                  autocomplete="off"
                  data-ouia-component-id="datetime-picker-input"
                  data-ouia-component-type="PF6/TextInput"
                  data-ouia-safe="true"
                  id="template-date-input-4"
                  name="report_template_report[input_values][4][value]"
                  placeholder="YYYY-MM-DD HH:MM"
                  type="text"
                  value="2019-01-04 01:00"
                />
              </span>
            </div>
            <div
              class="inputGroupItem date-picker-input-item"
            >
              <button
                aria-label="Toggle date picker"
                class="button"
                data-ouia-component-id="toggle-calendar-button"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="buttonIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="inputGroupItem date-picker-input-item"
            >
              <div
                class="datePicker time-picker-pf"
              >
                <div
                  class="datePickerInput"
                  locale="EN"
                  style="--pf-v6-c-date-picker__input--c-form-control--Width: 150px;"
                >
                  <div
                    class="inputGroup"
                  >
                    <div
                      class="inputGroupItem"
                    >
                      <div
                        id="time-picker-stable"
                      >
                        <div
                          style="padding-left: 0px;"
                        >
                          <span
                            class="formControl"
                          >
                            <input
                              aria-haspopup="menu"
                              aria-invalid="false"
                              aria-label="Time picker"
                              autocomplete="off"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                              data-ouia-component-type="PF6/TextInput"
                              data-ouia-safe="true"
                              id="template-date-input-4-time-picker"
                              name=""
                              placeholder="hh:mm"
                              type="text"
                              value="01:00"
                            />
                            <span
                              class="formControlUtilities"
                            >
                              <span
                                class="formControlIcon"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateTime rendering renders with Require and Info 1`] = `
<div>
  <div
    class="form-group  "
  >
    <label
      class="col-md-2 control-label"
    >
      some-label
       *
      <div
        style="display: contents;"
      >
        <button
          class="button field-help"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="buttonIcon"
          >
            <span
              class="icon"
            >
              <span
                class="iconContent"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                  />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </label>
    <div
      class="col-md-6"
    >
      <div
        class="date-time-picker-pf-wrapper"
      >
        <div
          style="display: contents;"
        >
          <div
            class="inputGroup"
          >
            <div
              class="inputGroupItem pf-v6-c-date-picker__input pf-v6-c-date-picker "
            >
              <span
                class="formControl  pf-v6-c-form-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="date and time picker"
                  autocomplete="off"
                  data-ouia-component-id="datetime-picker-input"
                  data-ouia-component-type="PF6/TextInput"
                  data-ouia-safe="true"
                  id="template-date-input-4"
                  name="report_template_report[input_values][4][value]"
                  placeholder="YYYY-MM-DD HH:MM"
                  required=""
                  type="text"
                  value="2019-01-04 01:00"
                />
              </span>
            </div>
            <div
              class="inputGroupItem date-picker-input-item"
            >
              <button
                aria-label="Toggle date picker"
                class="button"
                data-ouia-component-id="toggle-calendar-button"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="buttonIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="inputGroupItem date-picker-input-item"
            >
              <div
                class="datePicker time-picker-pf"
              >
                <div
                  class="datePickerInput"
                  locale="EN"
                  style="--pf-v6-c-date-picker__input--c-form-control--Width: 150px;"
                >
                  <div
                    class="inputGroup"
                  >
                    <div
                      class="inputGroupItem"
                    >
                      <div
                        id="time-picker-stable"
                      >
                        <div
                          style="padding-left: 0px;"
                        >
                          <span
                            class="formControl"
                          >
                            <input
                              aria-haspopup="menu"
                              aria-invalid="false"
                              aria-label="Time picker"
                              autocomplete="off"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                              data-ouia-component-type="PF6/TextInput"
                              data-ouia-safe="true"
                              id="template-date-input-4-time-picker"
                              name=""
                              placeholder="hh:mm"
                              type="text"
                              value="01:00"
                            />
                            <span
                              class="formControlUtilities"
                            >
                              <span
                                class="formControlIcon"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
